restructure repo: move nvim and wezterm configs into subdirectories
Add install.sh for symlink setup, update gitignore and readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Neovim
-.netrwhist
-spell/
+nvim/.netrwhist
+nvim/spell/
 
 # OS
 .DS_Store
 Thumbs.db
 
 # Local overrides
-lua/local.lua
+nvim/lua/local.lua
