--- a/zed/settings.json
+++ b/zed/settings.json
@@ -24,8 +24,9 @@
   "session": {
     "trust_all_worktrees": true
   },
+  "restore_on_startup": "launchpad",
   "icon_theme": {
-    "mode": "system",
+    "mode": "dark",
     "light": "Zed (Default)",
     "dark": "Zed (Default)"
   },
@@ -36,7 +37,7 @@
   "ui_font_size": 20,
   "buffer_font_size": 22,
   "theme": {
-    "mode": "system",
+    "mode": "dark",
     "light": "One Light",
     "dark": "One Dark"
   },
