--- a/zed/settings.json
+++ b/zed/settings.json
@@ -41,6 +41,7 @@
     "light": "One Light",
     "dark": "One Dark"
   },
+  "autosave": "off",
   "format_on_save": "on",
   "formatter": "language_server",
   "lsp": {
