--- a/zed/settings.json
+++ b/zed/settings.json
@@ -34,8 +34,9 @@
     "diagnostics": false,
     "metrics": false
   },
-  "ui_font_size": 20,
-  "buffer_font_size": 22,
+  "ui_font_size": 23,
+  "buffer_font_family": "JetBrains Mono",
+  "buffer_font_size": 23,
   "theme": {
     "mode": "dark",
     "light": "One Light",
